--- a/_posts/0204-05-08-week-1.md
+++ b/_posts/0204-05-08-week-1.md
@@ -4,7 +4,7 @@ title: "Week 1 (May 01 - May 08)"
 date: 2024-05-09
 categories: [GSoC]
 tags: [GSoC, weekly update]
-excerpt: "Reviewed patches from @DrRTEMS, identified necessary changes, and planned next steps with no significant blockers."
+excerpt: "Reviewed patches from Joel Sherril, identified necessary changes, and planned next steps with no significant blockers."
 author: Alessandro Nardin
 
 ---
