modifications to week 1 post and addition of content in the homepage

--- a/_posts/0204-05-08-week-1.md
+++ b/_posts/0204-05-08-week-1.md
@@ -4,7 +4,7 @@ title: "Week 1 (May 01 - May 08)"
 date: 2024-05-09
 categories: [GSoC]
 tags: [GSoC, weekly update]
-excerpt: "Reviewed patches from Joel Sherril, identified necessary changes, and planned next steps with no significant blockers."
+excerpt: "Reviewed patches received from Joel Sherril, identified necessary changes, and planned next steps with no significant blockers."
 author: Alessandro Nardin
 
 ---
@@ -37,7 +37,8 @@ author: Alessandro Nardin
 
 ## 🔜 Next Week Activities
 
-- **Create a merge request for the necessary patches**: Prepare and submit a merge request for patches 0001 and 0003.
+- **Create a merge request for the necessary patches**: Prepare and submit a merge request for the patches.
+- **Create a weekly blog to track prgress**: Prepare and submit a merge request for the patches.
 - **Understand the codebase in depth**: Go through all the codebase relevant to my project to understand its functionality and structure.
 
 
