--- a/_posts/2024-06-04-post1.md
+++ b/_posts/2024-06-04-post1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "GSoC Contributions: Reviewing Patches"
-date: 2024-07-15
+title: "First Contribution: Reviewing Patches"
+date: 2024-06-04
 categories: [GSoC]
 tags: [GSoC]
 excerpt: "My first contribution to GSoC involved reviewing three patches sent by my mentor, Joel Sherrill."
