--- a/gsoc/_posts/2024-06-25-post3.md
+++ b/gsoc/_posts/2024-06-25-post3.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Implementing aio_return and aio_error"
+title: "Corrections to aio_return and aio_error"
 date: 2024-06-25
 categories: [GSoC]
 tags: [GSoC]
-excerpt: "Addressing the implementation of aio_return and aio_error according to specifications and improving error handling."
+excerpt: "Correcting the implementation of aio_return() and aio_error() to make it compliant to the POSIX specifications."
 author: Alessandro Nardin
 ---
 
