added post signal

--- a/gsoc/_posts/2024-08-02-post5.md
+++ b/gsoc/_posts/2024-08-02-post5.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: "Add support for O_DSYNC in aio_fsync()"
+title: "Add support for `O_DSYNC` in `aio_fsync()`"
 date: 2024-08-02
 categories: [GSoC]
 tags: [GSoC]
-excerpt: "Adding support for the operator O_DSYNC in aio_fsync()."
+excerpt: "Adding support for the operator `O_DSYNC` in `aio_fsync().`"
 author: Alessandro Nardin
 ---
 
-The second issue I addressed was a lack of functionality in the aio_fsync function. According to the specifications, the `op` parameter of the function can have two values: `O_SYNC` and `O_DSYNC`. This value indicates what kind of synchronization has to be performed on the file. Specifically, `O_SYNC` will sync the file as per a call to `fsync()`, while `O_DSYNC` corresponds to a call to `fdatasync()`.
+The second issue I addressed was a lack of functionality in the `aio_fsync()` function. According to the specifications, the `op` parameter of the function can have two values: `O_SYNC` and `O_DSYNC`. This value indicates what kind of synchronization has to be performed on the file. Specifically, `O_SYNC` will sync the file as per a call to `fsync()`, while `O_DSYNC` corresponds to a call to `fdatasync()`.
 
 Before beginning the work on this part, I encountered a blocking issue. Specifically, O_DSYNC was not defined. I discovered this while looking for existing issues related to my project. The issue I found was issue #1683, which highlighted the missing definitions of `O_DSYNC` and `O_RSYNC` in Newlib. After verifying that the issue was not outdated and discussing the problem with my mentors, we reached the following solution: To allow me to begin the work on that part, I would temporarily define the missing macros in the installed files of Newlib on my machine. While I did this, my mentor submitted a patch to Newlib that added the missing macros. This way, I managed to begin writing a first version of the fix.
 
