add new post and rename stuff

--- a/gsoc/_posts/2024-08-02-dsync.md
+++ b/gsoc/_posts/2024-08-02-dsync.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Add support for `O_DSYNC` in `aio_fsync()`"
+title: "Add support for O_DSYNC in aio_fsync()"
 date: 2024-08-02
 categories: [GSoC]
 tags: [GSoC]
-excerpt: "Adding support for the operator `O_DSYNC` in `aio_fsync().`"
+excerpt: "Adding support for the operator O_DSYNC in aio_fsync()."
 author: Alessandro Nardin
 ---
 
