--- a/gsoc/_posts/2024-07-12-coverage.md
+++ b/gsoc/_posts/2024-07-12-coverage.md
@@ -47,12 +47,11 @@ Finally, to generate a detailed coverage report, I used the following command:
 gcovr --gcov-executable sparc-rtems6-gcov --html-details ../coverage/aio-coverage.html --html-title "AIO Coverage" --gcov-ignore-parse-errors=negative_hits.warn --filter cpukit/posix/src/aio
 ```
 
-This command runs gcovr to produce an HTML coverage report:
-
-    `--html-details ../coverage/aio-coverage.html` generates a detailed HTML report and saves it as aio-coverage.html in the ../coverage/ directory.
-    `--html-title "AIO Coverage"` gives the report a specific title, making it easier to identify.
-    `--gcov-ignore-parse-errors=negative_hits.warn` tells gcovr to ignore certain parsing errors that may occur.
-    `--filter cpukit/posix/src/aio` restricts the coverage analysis to the files related to the Asynchronous I/O (AIO) implementation.
+This command runs gcovr to produce an HTML coverage report, here's a description of the flags used:
+- `--html-details ../coverage/aio-coverage.html` generates a detailed HTML report and saves it as aio-coverage.html in the ../coverage/ directory.
+- `--html-title "AIO Coverage"` gives the report a specific title, making it easier to identify.
+- `--gcov-ignore-parse-errors=negative_hits.warn` tells gcovr to ignore certain parsing errors that may occur.
+- `--filter cpukit/posix/src/aio` restricts the coverage analysis to the files related to the Asynchronous I/O (AIO) implementation.
 
 
 This way I managed to generate a coverage report limited to the code i was interested in. Here's a screenshot of the output i was able to see.
