--- a/gsoc/_posts/2024-07-12-coverage.md
+++ b/gsoc/_posts/2024-07-12-coverage.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Running test coverage"
+title: "Coverage analysis"
 date: 2024-08-02
 categories: [GSoC]
 tags: [GSoC]
-excerpt: "Adding support for the operator O_DSYNC in aio_fsync()."
+excerpt: "How I run the coverage analysis for my tests."
 author: Alessandro Nardin
 ---
 
